# svm_trainer

./: CMakeLists.txt  main.cpp  matdgns.c  matio_2.cpp  matio_test.cpp  test.cpp
data/wiki_crop/: data.csv
libs/dlib-19.14/: generate-symlink.sh
libs/dlib-19.14/dlib/: revision.h
libs/dlib-19.14/dlib/all/: module-trunc.mk  module.mk
